Fixed skills not showing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -223,8 +223,8 @@ body {
 
 p {
   cursor: default;
-  line-height: 25px;
-  letter-spacing: 0.7px;
+  line-height: 27px;
+  letter-spacing: 0.6px;
 }
 
 .scrollable {
